# webAPP

./: .env.example  .gitignore  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt  yoyo.ini
backend/alembic/: env.py
backend/alembic/versions/: 160baaef07bb_add_client_fields.py  f9685d7f83cf_.py
backend/app/: main.py
backend/app/checkers/: router.py
backend/app/clients/: router.py
backend/app/simple_processing/: router.py
backend/config/: .env.example  settings.py
backend/core/: config.py
backend/migrations/: hackaton_20250523_04_GYupF-add-suspect-description.sql
backend/schemas/: client.py  suspicious.py
backend/src/: __main__.py
backend/src/api/: healthcheck.py  router.py
backend/src/api/v1/: analyze.py
backend/src/enums/: __init__.py
backend/src/repositories/: __init__.py  accounts.py  addresses.py
backend/src/schemas/: __init__.py  account.py  address.py
backend/src/storage/: __init__.py  postgres.py
backend/storage/: postgres.py
backend/storage/models/: client.py  consumption.py  meta.py  suspicious.py
backend/utils/algorithm/: processor.py
backend/utils/algorithm/model/: model_1.cbm  model_2.cbm
backend/utils/claim_generation/: main.py
backend_v1/migrations/: hackaton_20250523_01_xXHeE-initial.sql  hackaton_20250523_02_WE1dq-add-auto-generated-field.sql  hackaton_20250523_03_Y1qIR-update-addresses-columns.sql  (+1 more)
frontend/: .env.example  BACKEND_INTEGRATION.md  Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  (+2 more)
(+29 files in other folders)
